...
extension MasterViewController {
    
    @objc
    private func insertNewObject(_ sender: Any) {
        let context = fetchedResultsController.managedObjectContext
        
        let alert = UIAlertController(title: "Add a Meal", message: nil, preferredStyle: .alert)
        
        var nameTextField: UITextField!
        var caloriesTextField: UITextField!
        
        alert.addTextField { (textField: UITextField) in
            nameTextField = textField
        }
        alert.addTextField { (textField: UITextField) in
            caloriesTextField = textField
        }
        
        alert.addAction(UIAlertAction(title: "Ok", style: .default, handler: { (action: UIAlertAction) in
            print("name is \(String(describing: nameTextField.text))")
            print("calories is \(String(describing: caloriesTextField.text))")
            
            // Create a new managed object using the user inputted values
            let newMeal = Meal(context: context)
            newMeal.name = nameTextField.text
...
